--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="/pics/11th floor.png" alt="Ooops you're not supposed to see this!" width="100%"
+    <img src="/pics/menu 11th.png" alt="Ooops you're not supposed to see this!" width="100%"
          height="auto">
 </body>
 </html>
